gradle config updated